stories width fixed on mobile

--- a/app/css/responsive.css
+++ b/app/css/responsive.css
@@ -404,6 +404,7 @@
 
   .result__card span {
     line-height: 0.7;
+    margin-top: 5px;
   }
 
   .result__card p {
